kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dnspropagation
  namespace: dnspropagation
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: dnspropagation
  type: ClusterIP
