kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dnspropagation-vangel-io
  namespace: dnspropagation
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;      
spec:
  tls:
  - hosts:
    - dnspropagation.vangel.io
    secretName: dnspropagation-vangel-io-tls
  rules:
  - host: dnspropagation.vangel.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dnspropagation
            port:
              number: 8080
